examples/tests/compile_fail/error_handler_capture_fail.zl
error E = 1;

fun f() >> i32 {
    send E;
}

fun main() >> i32 {
    i32 x = 7;
    f() on E {
        @printf("%d\n", x);
    };
    return 0;
}
